Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24859

Cannot run CDB when PYTHONPATH is set

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.14.0-beta2
    • Qt Creator 4.13.2
    • Debugger
    • None
    • Windows 10, Qt 5.15.1, VS 2019 16.7.6, Qt creator 4.13.2
    • Windows
    • fc39cf18e11f81a8d6f748b9b383f632343dab80 (qt-creator/qt-creator/4.14)

      If the PYTHONPATH environment is set, QtCreator is unable to run CDB (qmake project).
      When starting a debugger session, the following error message is displayed : "The CDB process terminated".
      That's odd, because if I disable "Python dumper" in Tools > Options > Debugger > CDB, it doesn't change anything.
      The debugger output doesn't contain valuable information to solve this problem (see attached file).

      As a workaround, it is possible to : go to the project tab > build environment > PYTHONPATH > disable.
      Other people having the same bug :
      https://forum.qt.io/topic/69130/unexpected-cdb-exit
      https://stackoverflow.com/questions/49638891/qt-cdb-crashes-after-setting-pythonpath

      Happens with Python 3.6 32bits (while debugging a 64bit program with cdb x64).
      Happens with Python 3.9 64 bits (latest).
      It may annoy Qt for Python developers.

      Can you setup a better error message / debugger log, or resolve the problem ?

      Thanks a lot.

        1. CdbErrorPythonPath.txt
          5 kB
        2. env3.PNG
          env3.PNG
          26 kB
        For Gerrit Dashboard: QTCREATORBUG-24859
        # Subject Branch Project Status CR V

            davschul David Schulz
            kiruahxh kiruahxh
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes