Debugger: fix debugger in modified python environment

We do not want to pick up any python environment variables for the
cdbext python initialization which might change the module search path,
because we already contain the needed python modules in the zip file
next to the extension.

Fixes: QTCREATORBUG-24859
Change-Id: I0d597f42042d249529309263d71b0e740e903a48
Reviewed-by: Christian Stenger <christian.stenger@qt.io>